activity: achievements overflow fix

--- a/adwaita/adwaita.css
+++ b/adwaita/adwaita.css
@@ -54,5 +54,5 @@
 
 :root
 {
-	--adw-version: "3.14";
+	--adw-version: "3.15";
 }
